--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -43,3 +43,79 @@
     right: 0;
     left: 0;
 }
+
+.chat-input img{
+    width: 30px;
+    cursor: pointer;
+
+}
+
+.chat-input label{
+    display: flex;
+}
+.chat-input label img{
+    width: 22px;
+}
+
+.chat-input input{
+    flex: 1;
+    outline: none;
+    border: none;
+}
+
+.chat-msg{
+    height: calc(100% - 70px);
+    padding-bottom: 50px;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.s-msg div img,
+.r-msg div img{
+    width: 27px;
+    aspect-ratio: 1/1;
+    border-radius: 15px;
+}
+
+.s-msg,
+.r-msg{
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    padding: 0px 5px;
+    gap: 5px;
+}
+
+.r-msg{
+    flex-direction: row-reverse;
+    justify-content: start;
+}
+
+.msg{
+    color: white;
+    background: #077eff;
+    padding: 8px;
+    max-width: 200px;
+    font-size: 11px;
+    font-weight: 300px;
+    border-radius: 8px 8px 0 8px;
+    margin-bottom: 30px;
+}
+
+.r-msg .msg{
+    background: #700bff;
+    border-radius: 8px 8px 8px 0;
+}
+
+.s-msg div,
+.r-msg div{
+    text-align: center;
+    font-size: 9px;
+}
+
+.msg-img {
+    max-width: 230px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+}
